fix text-align center for safari

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,9 @@ html, body {
 }
 
 #hours {
-  text-align:center;
+      display:inline-block;
+
+ text-align: -webkit-center;
   font-size: 20px;
   margin: 0;
   height: auto;
@@ -73,4 +75,12 @@ html, body {
   margin-left: 20%;
   margin-top: 0%
   }
+
+#popup {
+  font-family: American Typewriter;
+   font-stretch: condensed;
+   margin: 0;
+   padding: 5px;
+ }
+
 
